--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "5.4.0",
     "bootstrap": "4.6",
     "jquery": "^3.6.0",
+    "ngrok": "^4.0.1",
     "popper.js": "^1.16.1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
