--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Cultivate"
-meta_title: "Cultivate - A digital gratitude platform"
+meta_title: "Cultivate - Gratitude, grown"
 meta_description: "Gratitude journal for the digital world. Guidance for reflection, reminders to find routines that help bring joy."
 meta_image: "cover.png" # should exist in `app/assets/images/`
